--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,13 @@
-__pycache__/
-*.py[cod]
-*$py.class
-
-# 민감한 정보가 담긴 파일 (절대 올리지 마세요)
+# 환경 변수 및 비밀번호 파일 (절대 올리지 마세요)
+.env
 config.py
-database.py
+
+# 파이썬 컴파일 캐시
+__pycache__/
+*.pyc
+
+# 로컬 데이터 파일 (개인정보 보호)
 user_data.json
 
-# 가상환경 및 환경변수
-.env
-.venv
-env/
-venv/
-
-# 로그 파일
-*.log
+# IDE 설정
+.vscode/
