--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,16 @@
 # 환경 변수 및 비밀번호 파일 (절대 올리지 마세요)
+# 설정 및 보안 파일 (절대 올리지 마세요)
+config.py
 .env
 config.py
 
 # 파이썬 컴파일 캐시
+# 데이터 파일
+*.json
+*.sql
+!schema.sql
+
+# 파이썬 캐시 및 가상환경
 __pycache__/
 *.pyc
 
@@ -11,3 +19,5 @@ user_data.json
 
 # IDE 설정
 .vscode/
+*.py[cod]
+venv/
